--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: employeeTracker_development
+  database: <%= ENV['EMPLOYEETRACKER_DATABASE_NAME'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: employeeTracker
+  username: <%= ENV['EMPLOYEETRACKER_DATABASE_USERNAME'] %>
 
   # The password associated with the postgres role (username).
-  #password:
+  password: <%= ENV['EMPLOYEETRACKER_DATABASE_PASSWORD'] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
